iconos, márgenes y estilos

--- a/regalo.html
+++ b/regalo.html
@@ -62,13 +62,13 @@
                     <br/>
                     <p>Detalles del regalo:</p>
                     <ul>
-                        <li>Del 15 al 19 de Marzo</li>
-                        <li>Translados with audish</li>
-                        <li>Hotel divino de la muerte</li>
-                        <li>Visitas por doquier</li>
+                        <li>&#128197; Del 15 al 19 de Marzo</li>
+                        <li>&#128663; Translados with audish</li>
+                        <li>&#127977; Hotel divino de la muerte</li>
+                        <li>&#129488; Visitas por doquier</li>
                         <!-- Agrega más detalles si es necesario -->
                     </ul>
-                    <p>Ti amo mi princess, a disfrutar esta escapada!!</p>
+                    <p>Prepara las 🧳 que nos vamos!!</p>
                 </div>
             </div>
         </div>
