--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, orientation=landscape">
     <title>Login de San Valentín</title>
-    <!-- Enlaces a los archivos CSS de Bootstrap -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,6 +18,24 @@
                 requestFullScreen.call(el);
             }
         });
+
+        window.addEventListener("DOMContentLoaded", function() {
+            var img = document.getElementById("backgroundImage");
+
+            function ajustarImagen() {
+                if (window.innerWidth > window.innerHeight) {
+                    img.style.width = "100%";
+                    img.style.height = "auto";
+                } else {
+                    img.style.width = "auto";
+                    img.style.height = "100%";
+                }
+            }
+
+            ajustarImagen();
+
+            window.addEventListener("resize", ajustarImagen);
+        });
     </script>
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -27,7 +45,7 @@
                         <h2 class="text-center textologin">&#129505; Feliz San Valentín &#129505;</h2>
                     </div>
                     <div class="card-body">
-                        <form id="loginForm" action="regalo.html" method="get"> <!-- Redirecciona a la página de regalo al hacer login -->
+                        <form id="loginForm" action="regalo.html" method="get">
                             <div class="form-group">
                                 <label for="usuario">¿Que eres? <span id="iconlabel">&#128540</span></label>
                                 <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Andale pues" required>
@@ -44,21 +62,19 @@
         </div>
     </div>
 
-    <!-- Enlaces a los archivos JavaScript de Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-        // Función para validar el formulario de inicio de sesión
+
         document.getElementById("loginForm").addEventListener("submit", function(event) {
             var usuario = document.getElementById("usuario").value;
             var contraseña = document.getElementById("contraseña").value;
 
-            // Comprobando credenciales
-            if (usuario !== "feliz" || contraseña !== "san valentin") {
-                alert("Usuario o contraseña incorrectos. Por favor, inténtalo de nuevo.");
-                event.preventDefault(); // Evita que se envíe el formulario
+            if (usuario.toLowerCase() !== "feliz" || contraseña.toLowerCase() !== "san valentin") {
+                alert("No no no, muy mal. La mamasita se equivocó!");
+                event.preventDefault();
             }
         });
     </script>
