--- a/regalo.html
+++ b/regalo.html
@@ -36,6 +36,8 @@
                                 Aquí bajo tienes un regalito, espero que te guste!!
                             </p>
                         </div>
+                    </br>
+                        <h4 class="text-center">&#128158; Te amo &#128152;</h4>
                     </div>
                     <h5 class="text-center pt-2">&#129322;¿¿!UUUoOOOoo Que será!??&#128562;</h5>
                     <div class="card-body">
